# PewPewCH32

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  firmware.txt  manifest.cmake
firmware/: manifest.cmake
firmware/bootloader/: Makefile  bootloader.c  funconfig.h
firmware/bootloader/lib/: app.ld  bl_client.c  bl_client.h  bl_protocol.h  crc32.c  crc32.h
firmware/bootloader/linker/: bootloader.ld
firmware/bootloader/src/: bl_config.h  bl_flash.c  bl_flash.h  bl_i2c.c  bl_i2c.h  bl_main.c
firmware/bootloader/tools/: mkupd.py
firmware/examples/blink/: Makefile  blink.c
src/: BuzzerController.cpp  BuzzerController.h  Console.cpp  DisplayController.cpp  DisplayController.h  InputHandler.cpp  InputHandler.h  LedController.cpp  LedController.h  PicoSWIO.cpp  Settings.cpp  Settings.h  SetupScreen.cpp  SetupScreen.h  StateMachine.cpp  StateMachine.h  crc32.h  fallback_firmware.h  fw_metadata.h  main.cpp  utils.cpp  utils.h  ws2812.pio
